feat: align card height to 120px

--- a/test-hauteurs.html
+++ b/test-hauteurs.html
@@ -141,24 +141,24 @@
         <div class="info">
             <h2>📏 Comparaison des hauteurs</h2>
             <ul>
-                <li><strong>120px (très compact)</strong> : Police réduite, espacements minimum</li>
-                <li><strong>140px</strong> : Compact mais lisible</li>
-                <li><strong>160px (actuel)</strong> : Bon équilibre lisibilité/compacité</li>
-                <li><strong>180px</strong> : Plus d'espace, confortable</li>
+                <li><strong>120px (actuel)</strong> : Affichage complet et compact</li>
+                <li><strong>140px</strong> : Un peu plus d'espace</li>
+                <li><strong>160px</strong> : Confortable mais plus grand</li>
+                <li><strong>180px</strong> : Très spacieux</li>
             </ul>
-            
-            <h3>✅ Changements appliqués (160px)</h3>
+
+            <h3>✅ Changements appliqués (120px)</h3>
             <ul>
-                <li>Hauteur : 200px → <strong>160px</strong></li>
-                <li>Padding : 24px → <strong>16px</strong></li>
-                <li>Température : 64px → <strong>48px</strong></li>
-                <li>Ville : 18px → <strong>16px</strong></li>
-                <li>Condition : 16px → <strong>14px</strong></li>
-                <li>Min/Max : 16px → <strong>14px</strong></li>
+                <li>Hauteur : 160px → <strong>120px</strong></li>
+                <li>Padding : 16px → <strong>12px</strong></li>
+                <li>Température : 48px → <strong>36px</strong></li>
+                <li>Ville : 16px → <strong>14px</strong></li>
+                <li>Condition : 14px → <strong>12px</strong></li>
+                <li>Min/Max : 14px → <strong>12px</strong></li>
             </ul>
-            
+
             <h3>🎯 Si vous voulez encore plus compact</h3>
-            <p>Je peux créer une version 120px avec les polices encore plus petites.</p>
+            <p>Je peux créer une version 100px avec les polices encore plus petites.</p>
         </div>
     </div>
 </body>
